# DuckDuckGoMCP

./: Dockerfile  README.md  pyproject.toml  smithery.yaml
duckduckgo_mcp/: __init__.py  server.py
